# search-benchmark-game

./: .gitignore  .gitmodules  CONTRIBUTE.md  Dockerfile  Makefile  README.md  corpus_transform.py  extract_queries.py  format_queries.py  queries.txt  query_term.txt  results.json
engines/bleve-0.8.0-boltdb/: Makefile
engines/bleve-0.8.0-moss/: Makefile  build_index.go
engines/bleve-0.8.0-scorch/: Makefile  build_index.go
engines/bluge-0.2.2/: go.mod
engines/infino-0.1/: Cargo.toml  Makefile  README.md  details.json
engines/iresearch/: Makefile  README.md
engines/iresearch-26.03.1/: Makefile  README.md  details.json
engines/lucene-10.4.0/: details.json
engines/lucene-7.2.1/: Makefile
engines/lucene-8.0.0/: Makefile
engines/lucene-9.12.0/: build.gradle
engines/pisa-0.8.0/: Makefile
engines/pisa-0.8.0/tools/: do_query.cpp
engines/pisa-0.8.1/: CMakeLists.txt  Makefile
engines/pisa-0.8.1/tools/: build_index.cpp  do_query.cpp
engines/pisa-0.8.2/: Makefile  details.json
engines/pisa-0.8.2/tools/: build_index.cpp  do_query.cpp
engines/tantivy-0.14/: Cargo.toml
engines/tantivy-0.15/: Cargo.toml
engines/tantivy-0.22/: details.json
engines/tantivy-0.22-regex/: Cargo.toml
engines/tantivy-0.6/: Makefile
engines/tantivy-0.7/: Makefile
engines/tantivy-0.8/: Makefile
engines/tantivy-0.9/: Makefile
engines/tantivy-main/: Cargo.toml
skills/bisect/: SKILL.md
skills/test-changes/: SKILL.md
src/: client.py
tools/: analyze.py
web/: package-lock.json  package.json  serve.py
web/output/: results.json
web/src/: index.js  style.scss
(+13 files in other folders)
