[package]
name = "infino-bench"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "build_index"
path = "src/bin/build_index.rs"

[[bin]]
name = "do_query"
path = "src/bin/do_query.rs"

[dependencies]
# Path dependency on the in-tree infino crate. The benchmark exercises
# infino's embedded BM25 FTS index directly via FtsBuilder / FtsReader —
# the exact code path that SuperfileReader::bm25_search delegates to.
infino = { path = "../../../infino" }
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
lto = true
opt-level = 3
overflow-checks = false
codegen-units = 1
