[package]
name = "infino-bench"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "build_index"
path = "src/bin/build_index.rs"

[[bin]]
name = "do_query"
path = "src/bin/do_query.rs"

[dependencies]
infino = { version = "0.1.8", features = ["test-helpers"] }
arrow-array = "58"
arrow-schema = "58"
rayon = "1"
tokio = { version = "1", features = ["rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
lto = true
opt-level = 3
overflow-checks = false
codegen-units = 1
